# datafusion-dist

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
clusters/memory/: Cargo.toml
clusters/postgres/: Cargo.toml
clusters/postgres/src/: builder.rs  cluster.rs  error.rs  lib.rs
docs/: datafusion-dist-arch.drawio
integration-tests/: Cargo.toml  docker-compose.yaml
integration-tests/app/: Cargo.toml  Dockerfile
integration-tests/app/src/: data.rs  main.rs  table.rs
integration-tests/src/: data.rs  docker.rs  lib.rs  utils.rs
integration-tests/testdata/postgres/: docker-compose.yaml
integration-tests/tests/: e2e.rs  exception.rs  graceful_exit.rs  planner.rs  sqllogictest.rs  sqllogictest.slt  tmp.rs  zero_col_regression.slt
integration-tests/tests/slts/: aggregate.slt  join.slt  other.slt  union.slt
metas/memory/: Cargo.toml
networks/tonic/: Cargo.toml
networks/tonic/src/: codec.rs  lib.rs  network.rs  protobuf.rs  serde.rs  server.rs
