[workspace]
members = [
  "dist",
  "clusters/postgres",
  "integration-tests",
  "integration-tests/app",
  "networks/tonic",
  "networks/tonic/gen",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
homepage = "https://github.com/systemxlabs/datafusion-dist"
license = "MIT"
repository = "https://github.com/systemxlabs/datafusion-dist"

[workspace.dependencies]
datafusion-dist = { path = "dist", version = "0.2.0" }
datafusion-dist-cluster-postgres = { path = "clusters/postgres", version = "0.2.0" }
datafusion-dist-network-tonic = { path = "networks/tonic", version = "0.2.0" }
datafusion-dist-integration-tests = { path = "integration-tests", version = "0.2.0" }

arrow = "57"
arrow-flight = "57"
async-trait = "0.1"
datafusion = "51"
datafusion-catalog = "51"
datafusion-common = "51"
datafusion-execution = "51"
datafusion-expr = "51"
datafusion-physical-expr = "51"
datafusion-physical-plan = "51"
datafusion-proto = "51"
derive-with = "0.7.0"
env_logger = "0.11"
futures = "0.3"
itertools = "0.14"
local-ip-address = "0.6.8"
log = "0.4"
parking_lot = "0.12.5"
prost = "0.14"
tonic = "0.14"
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
serde = "1.0"
serde_json = "1.0"
sqllogictest = "0.29.0"
sqllogictest-flightsql = "0.1.0"
sysinfo = "0.37"
tokio = "1"
uuid = "1.18"
