[workspace]
members = [
  "dist",
  "clusters/postgres",
  "integration-tests",
  "integration-tests/app",
  "networks/tonic",
  "networks/tonic/gen",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
homepage = "https://github.com/systemxlabs/datafusion-dist"
license = "MIT"
repository = "https://github.com/systemxlabs/datafusion-dist"

[workspace.dependencies]
datafusion-dist = { path = "dist", version = "0.4.0" }
datafusion-dist-cluster-postgres = { path = "clusters/postgres", version = "0.4.0" }
datafusion-dist-network-tonic = { path = "networks/tonic", version = "0.4.0" }
datafusion-dist-integration-tests = { path = "integration-tests", version = "0.4.0" }

arrow = "58"
arrow-flight = "58"
async-trait = "0.1"
backon = "1.6"
datafusion = "53"
datafusion-catalog = "53"
datafusion-common = "53"
datafusion-execution = "53"
datafusion-expr = "53"
datafusion-physical-expr = "53"
datafusion-physical-plan = "54"
datafusion-proto = "53"
derive-with = "0.7.0"
env_logger = "0.11"
futures = "0.3"
itertools = "0.14"
local-ip-address = "0.6.13"
log = "0.4"
parking_lot = "0.12.5"
prost = "0.14"
tonic = "0.14"
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqllogictest = "0.29.0"
sqllogictest-flightsql = "0.2.0"
sysinfo = "0.37"
tokio = "1"
uuid = "1.23"
