[package]
name = "datafusion-dist-integration-tests"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
datafusion-dist = { workspace = true }
datafusion-dist-cluster-postgres = { workspace = true }
datafusion-dist-network-tonic = { workspace = true }

arrow-flight = { workspace = true, features = ["flight-sql-experimental"] }
datafusion = { workspace = true }
futures = { workspace = true }
sqllogictest = { workspace = true }
sqllogictest-flightsql = { workspace = true }
tokio = { workspace = true, features = ["full"]}
tonic = { workspace = true }
uuid = { workspace = true, features = ["v4"] }