[package]
name = "datafusion-dist-cluster-postgres"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
datafusion-dist.workspace = true

async-trait.workspace = true
futures.workspace = true
sysinfo.workspace = true
uuid.workspace = true
log.workspace = true
bb8 = "0.9"
bb8-postgres = "0.9"
thiserror = "2.0.17"
